--- a/web/views/framework.pug
+++ b/web/views/framework.pug
@@ -1,17 +1,32 @@
+////////////////////////////////////////////
+// Dan Nielsen
+////////////////////////////////////////////
 doctype html
-head
-  title malkachi app
-  meta(charset='utf-8')
-  meta(name='viewport' content='user-scalable=no')
-  link(rel='manifest' href='manifest.json')
-  link(rel='stylesheet' type='text/css' href='main.css')
-div(id='page' style="font-family:roman")
-  canvas(id='canvas' oncontextmenu='event.preventDefault()' width=640 height=480)
-  div(id='spinner')
-  div(id='output-div')
-    div(id='status')
-    span(id='output')
-script(src='xmeffects.js')
-script(src='xm.js')
+html(lang='en')
+  head
+    title malkachi app
+    meta(charset='utf-8')
+    meta(name='viewport' content='user-scalable=no')
+    link(rel='manifest' href='manifest.json')
+    link(rel='stylesheet' type='text/css' href='main.css')
+    script(src='xmeffects.js')
+    script(src='xm.js')
+    script(src='/socket.io/socket.io.js')
+    script(src='jquery-3.3.1.min.js')
+  body
+    div#page(style='font-family:latin')
+      canvas#canvas(oncontextmenu='event.preventDefault()' width=640 height=480)
+      div#spinner
+      ul#messages
+      div#ui-div
+        form#messages-form(action='')
+          input#messages-input(autocomplete='off' contentEditable='true')
+          button#messages-button &rarrhk;
+        div#output-div
+          div#status
+          div#output
+script(src='version.js')
+script(src='framework-input-handler.js')
 script(src='framework.js')
+script(src='chat.js')
 script(async src='bin/'+appFileBasename+'.js')
