--- a/web/views/framework.pug
+++ b/web/views/framework.pug
@@ -8,11 +8,11 @@ html(lang='en')
     meta(charset='utf-8')
     meta(name='viewport' content='user-scalable=no')
     link(rel='manifest' href='manifest.json')
-    link(rel='stylesheet' type='text/css' href='main.css')
-    script(src='xmeffects.js')
-    script(src='xm.js')
+    link(rel='stylesheet' type='text/css' href='css/main.css')
     script(src='/socket.io/socket.io.js')
-    script(src='jquery-3.3.1.min.js')
+    script(src='https://dwn.github.io/common/js/jquery-3.3.1.min.js')
+    script(src='js/xmeffects.js')
+    script(src='js/xm.js')
   body
     div#page(style='font-family:latin')
       canvas#canvas(oncontextmenu='event.preventDefault()' width=640 height=480)
@@ -26,7 +26,7 @@ html(lang='en')
           div#status
           div#output
 script(src='version.js')
-script(src='framework-input-handler.js')
-script(src='framework.js')
-script(src='chat.js')
+script(src='js/framework-input-handler.js')
+script(src='js/framework.js')
+script(src='https://dwn.github.io/common/js/chat.js')
 script(async src='bin/'+appFileBasename+'.js')
