--- a/web/views/chat.pug
+++ b/web/views/chat.pug
@@ -8,8 +8,8 @@ html(lang='en')
     meta(charset='utf-8')
     link(rel='stylesheet', type='text/css', href='../css/chat.css')
     script(src='/socket.io/socket.io.js')
-    script(src='https://dwn.github.io/common/js/mespeak.js')
     script(src='https://dwn.github.io/common/js/jquery-3.3.1.min.js')
+    script(src='/js/mespeak.js')
   body
     .container
       each lang in arrLang
