--- a/web/views/framework.pug
+++ b/web/views/framework.pug
@@ -11,8 +11,9 @@ html(lang='en')
     link(rel='stylesheet' type='text/css' href='css/main.css')
     script(src='/socket.io/socket.io.js')
     script(src='https://dwn.github.io/common/js/jquery-3.3.1.min.js')
-    script(src='js/xmeffects.js')
-    script(src='js/xm.js')
+    script(src='/js/mespeak.js')
+    script(src='/js/xmeffects.js')
+    script(src='/js/xm.js')
   body
     div#page(style='font-family:latin')
       canvas#canvas(oncontextmenu='event.preventDefault()' width=640 height=480)
