--- a/web/views/framework.pug
+++ b/web/views/framework.pug
@@ -20,9 +20,9 @@ html(lang='en')
       div#spinner
       ul#messages
       div#ui-div
-        form#messages-form(action='')
-          input#messages-input(autocomplete='off' contentEditable='true')
-          button#messages-button &rarrhk;
+        form#message-form(action='')
+          input#message-input(autocomplete='off' contentEditable='true')
+          button#message-button &rarrhk;
         div#output-div
           div#status
           div#output
