--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -48,11 +48,11 @@ span {
   /*min-height:300px;*/
   /*line-height:300px;*/
   background:rgba(109,191,232,.5);
-  background:-moz-linear-gradient(top,rgba(109,191,232,1) 0%,rgba(40,161,222,.5) 50%,rgba(40,161,222,.5) 50%,rgba(31,140,194,.49) 51%,rgba(31,140,194,.49) 51%,rgba(51,160,214,0) 100%);
-  background:-webkit-linear-gradient(top,rgba(109,191,232,1) 0%,rgba(40,161,222,.5) 50%,rgba(40,161,222,.5) 50%,rgba(31,140,194,.49) 51%,rgba(31,140,194,.49) 51%,rgba(51,160,214,0) 100%);
-  background:-o-linear-gradient(top,rgba(109,191,232,1) 0%,rgba(40,161,222,.5) 50%,rgba(40,161,222,.5) 50%,rgba(31,140,194,.49) 51%,rgba(31,140,194,.49) 51%,rgba(51,160,214,0) 100%);
-  background:-ms-linear-gradient(top,rgba(109,191,232,1) 0%,rgba(40,161,222,.5) 50%,rgba(40,161,222,.5) 50%,rgba(31,140,194,.49) 51%,rgba(31,140,194,.49) 51%,rgba(51,160,214,0) 100%);
-  background:linear-gradient(to bottom,rgba(109,191,232,1) 0%,rgba(40,161,222,.5) 50%,rgba(40,161,222,.5) 50%,rgba(31,140,194,.49) 51%,rgba(31,140,194,.49) 51%,rgba(51,160,214,0) 100%);
+  background:-moz-linear-gradient(top,rgba(109,191,232,1) 0%,rgba(40,161,222,.5) 50%,rgba(40,161,222,.5) 50%,rgba(31,140,194,.49) 51%,rgba(31,140,194,.49) 51%,rgba(51,160,214,.15) 100%);
+  background:-webkit-linear-gradient(top,rgba(109,191,232,1) 0%,rgba(40,161,222,.5) 50%,rgba(40,161,222,.5) 50%,rgba(31,140,194,.49) 51%,rgba(31,140,194,.49) 51%,rgba(51,160,214,.15) 100%);
+  background:-o-linear-gradient(top,rgba(109,191,232,1) 0%,rgba(40,161,222,.5) 50%,rgba(40,161,222,.5) 50%,rgba(31,140,194,.49) 51%,rgba(31,140,194,.49) 51%,rgba(51,160,214,.15) 100%);
+  background:-ms-linear-gradient(top,rgba(109,191,232,1) 0%,rgba(40,161,222,.5) 50%,rgba(40,161,222,.5) 50%,rgba(31,140,194,.49) 51%,rgba(31,140,194,.49) 51%,rgba(51,160,214,.15) 100%);
+  background:linear-gradient(to bottom,rgba(109,191,232,1) 0%,rgba(40,161,222,.5) 50%,rgba(40,161,222,.5) 50%,rgba(31,140,194,.49) 51%,rgba(31,140,194,.49) 51%,rgba(51,160,214,.15) 100%);
   border-radius:20px;
   outline:none;
   box-shadow:inset 0 1px 1px rgba(255,255,255,0.7);
